# gamemode

./: Cargo.toml
gamemode_sys/: Cargo.toml  build.rs
gamemode_sys/c_src/: wrapper.c  wrapper.h
gamemode_sys/src/: lib.rs
src/: lib.rs  linux_imp.rs  not_linux_imp.rs
