[package]
name = "gamemode_sys"
version = "0.1.1"
authors = ["George Burton <burtonageo@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "linux")'.build-dependencies.bindgen]
version = "0.55"
default-features = false
features = ["static", "runtime"]
